--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,4 @@
 .container {
-  min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
@@ -8,7 +7,6 @@
 }
 
 .main {
-  padding: 5rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -76,13 +74,13 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
+  transform: translate(10px, -100px);
 }
 
 .card {
   margin: 1rem;
   flex-basis: 45%;
+  height: 40%;
   padding: 1.5rem;
   text-align: left;
   color: inherit;
@@ -90,6 +88,7 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
+  background: #ffffff;
 }
 
 .card:hover,
